resolved some screen breaking points

--- a/src/components/stylesheets/GetVerified.css
+++ b/src/components/stylesheets/GetVerified.css
@@ -24,7 +24,7 @@
 
 .get-verified button {
     padding: 12px 25px;
-    background-color: #00732f;
+    background-color: #ff4500;
     color: #fff;
     border: none;
     border-radius: 5px;
